--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Front-end developer in spe - about Elise">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,13 +35,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="person doing yoga" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" alt="image of weather application" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" alt="image of yoghurt"/>
         </div>
       </div>
     </div>
@@ -48,7 +49,7 @@
 
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:[email]" class="email-link"> elise@blabla.com </a>
+      <a href="mailto:[email]" title="email address" class="email-link"> elise@blabla.com </a>
     </div>
   </body>
 </html>
