--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elise Bastaens</title>
+    <meta name="description" content="Elise's portfolio">
+    <title>Front-end developer in spe - Elise Bastaens</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Elise Bastaens</a>
+        <a class="navbar-brand" title="homepage" href="index.html">Elise Bastaens</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +37,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" title="homepage" href="index.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" title="about me" href="about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" title="contact me" href="about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -54,15 +55,15 @@
     <h1>Elise Bastaens</h1>
     <h3>🇧🇪 Front-end developer, based in Prague</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="blue-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="blue-link" title="contact me">Contact me</a>
+      <a href="about.html" class="about-link" title="about me">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <img
             src="images/yoga.png"
-            alt="Image of yoga"
+            alt="Image of person doing yoga"
             class="img-fluid rounded"
           />
         </div>
@@ -74,7 +75,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <a href="index.html" class="blue-link btn">Launch Yoga App</a>
+          <a href="index.html" class="blue-link btn" title="Yoga app">Launch Yoga App</a>
         </div>
       </div>
     <div class="row">
@@ -111,7 +112,7 @@
               eos eveniet alias temporibus deserunt veritatis minima fugiat
               explicabo eum dolore.
             </p>
-            <a href="index.html" class="blue-link btn">Launch Yoghurt App</a>
+            <a href="index.html" class="blue-link btn" title="Yoghurt app">Launch Yoghurt App</a>
       </div>
   </body>
 </html>
