--- a/about.html
+++ b/about.html
@@ -35,13 +35,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="person doing yoga" />
+          <img src="/images/yoga-app.png" class="img-fluid p-2 shadow rounded" alt="person doing yoga" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" alt="image of weather application" />
+          <img src="/images/weather-app.png" class="img-fluid p-2 shadow rounded" alt="image of weather application" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" alt="image of yoghurt"/>
+          <img src="/images/yoghurt-app.png" class="img-fluid p-2 shadow rounded" alt="image of yoghurt"/>
         </div>
       </div>
     </div>
