--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-md-6">
           <img
-            src="images/yoga.png"
+            src="/images/yoga-app.png"
             alt="Image of person doing yoga"
             class="img-fluid rounded"
           />
@@ -91,7 +91,7 @@
       </div>
       <div class="col-md-6">
           <img
-            src="images/weather.png"
+            src="/images/weather-app.png"
             alt="Image of weather"
             class="img-fluid rounded"
           />
@@ -99,7 +99,7 @@
     <div class="row">
         <div class="col-md-6">
             <img
-              src="images/yogurt.png"
+              src="/images/yoghurt-app.png"
               alt="Image of yoghurt"
               class="img-fluid rounded"
             />
