mobile responsiveness changes with bootstrap

--- a/index.html
+++ b/index.html
@@ -59,16 +59,17 @@
       <a href="about.html" class="about-link" title="about me">About me</a>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
+      <div class="row mt-5">
+        <div class="col-sm-6">
           <img
             src="/images/yoga-app.png"
             alt="Image of person doing yoga"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
+
         <div class="col-md-6">
-          <h2>Yoga app</h2>
+          <h2 class="mb-3">Yoga app</h2>
           <p class="description-app">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -78,8 +79,9 @@
           <a href="index.html" class="blue-link btn" title="Yoga app">Launch Yoga App</a>
         </div>
       </div>
-    <div class="row">
-        <div class="col-md-6">
+
+    <div class="row mt-5">
+        <div class="col-sm-6">
             <h2 class="mb-3">Weather app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -87,32 +89,38 @@
               eos eveniet alias temporibus deserunt veritatis minima fugiat
               explicabo eum dolore.
             </p>
-            <a href="index.html" class="blue-link btn">Launch Weather App</a>
+            <div class="mt-5">
+              <a href="index.html" class="blue-link btn">Launch Weather App</a>
+            </div>
+            
       </div>
-      <div class="col-md-6">
+      <div class="col-sm-6">
           <img
             src="/images/weather-app.png"
             alt="Image of weather"
             class="img-fluid rounded"
           />
         </div>
-    <div class="row">
-        <div class="col-md-6">
+    <div class="row mt-5">
+        <div class="col-sm-6">
             <img
               src="/images/yoghurt-app.png"
               alt="Image of yoghurt"
               class="img-fluid rounded"
             />
         </div>
-        <div class="col-md-6">
-            <h2>Yoghurt app</h2>
+        <div class="col-sm-6">
+            <h2 class="mb-3">Yoghurt app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
               quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
               eos eveniet alias temporibus deserunt veritatis minima fugiat
               explicabo eum dolore.
             </p>
-            <a href="index.html" class="blue-link btn" title="Yoghurt app">Launch Yoghurt App</a>
+            <div class="mt-5">
+              <a href="index.html" class="blue-link btn" title="Yoghurt app">Launch Yoghurt App</a>
+            </div>
+            
       </div>
   </body>
 </html>
