--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     ></script>
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
@@ -54,12 +55,12 @@
     <h2>👋 Hi I am</h2>
     <h1>Elise Bastaens</h1>
     <h3>🇧🇪 Front-end developer, based in Prague</h3>
-    <div class="navigation-links">
+    <div class="navigation-links mb-5">
       <a href="about.html#contact" class="blue-link" title="contact me">Contact me</a>
       <a href="about.html" class="about-link" title="about me">About me</a>
     </div>
     <div class="container">
-      <div class="row mt-5">
+      <div class="row">
         <div class="col-sm-6">
           <img
             src="/images/yoga-app.png"
@@ -68,7 +69,7 @@
           />
         </div>
 
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p class="description-app">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -97,8 +98,8 @@
       <div class="col-sm-6">
           <img
             src="/images/weather-app.png"
-            alt="Image of weather"
-            class="img-fluid rounded"
+            alt="Image of weather project"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
     <div class="row mt-5">
@@ -106,7 +107,7 @@
             <img
               src="/images/yoghurt-app.png"
               alt="Image of yoghurt"
-              class="img-fluid rounded"
+              class="img-fluid rounded d-none d-sm-block"
             />
         </div>
         <div class="col-sm-6">
